# c-init

./: .gitmodules  CMakeLists.txt  haikal.toml  test.txt
source/: fileops.c  main.c
src/: Arena.h  Component.c  Component.h  Rec.h  TypeX.c  TypeX.h  archetype.h  hkArray_TypeX.c  hkArray_TypeX.h  main.c  motor.h  vec3.h
src/StateMachine/: fault.c  fault.h  statemachine.c  statemachine.h
